# pokemon-scraper-de

./: .gitignore  pyproject.toml
core/: README.md  pyproject.toml  setup.cfg  setup.py
core/core/: __init__.py
core/core/assets/: constants.py  scraped_assets.py  urls.py
core/core/assets/datasets/: pokemon.csv
core/core/assets/scraped_data/: pokemon_all.html
