[tool.poetry]
name = "pokedex-de"
version = "0.1.0"
description = ""
authors = ["appauldev <appauldev+git@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dagster = "^1.7.12"
dagster-webserver = "^1.7.12"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.0"
grpcio = "<1.65"
ruff = "^0.5.1"
duckdb = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
